fix hover state being cut off

--- a/web/src/components/project-preview-grid.module.css
+++ b/web/src/components/project-preview-grid.module.css
@@ -8,7 +8,7 @@
     margin: 2em 0 10em;
   }
   padding: 0;
-  content-visibility: auto;
+  /* content-visibility: auto; */
 }
 
 .grid {
